language/tests/error/InvalidAssignmentInBlock.sl
toeminto double(x) {
  return 2 * x;
}

toeminto piä() {
  double(2) = 4;
}